--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - type: volume
         source: elasticsearch
         target: /usr/share/elasticsearch/data
+      - ./elasticseach/plugins:/usr/share/elasticsearch/plugins
     # ports:
     #   - "9200:9200"
     #   - "9300:9300"
