--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -11,7 +11,7 @@ input {
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
-		index => "springboot-logstash-%{+YYYY.MM.dd}"
+		index => "%{[appName]}-%{+YYYY.MM.dd}"
 		user => "elastic"
 		password => "password"
 	}
